[tool.poetry]
name = "snowcattail"
version = "0.1.0"
description = "snowcattail"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_vf", "nonebot_plugin_remake", "nonebot_plugin_weather_lite", "nonebot_plugin_covid19_news", "nonebot_plugin_everyday_en", "nonebot_plugin_minesweeper", "nonebot_plugin_covid_19_by", "nonebot_plugin_smart_reply", "nonebot_plugin_today_in_history", "nonebot_plugin_covid"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
